[gd_scene load_steps=6 format=3 uid="uid://cla44581h40u8"]

[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_jjb6d"]
[ext_resource type="FontFile" uid="uid://cgmns47sjwn70" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="1_xh380"]
[ext_resource type="AudioStream" uid="uid://dkudmc8rmwows" path="res://assets/audio/game_over.wav" id="3_t7s7k"]

[sub_resource type="LabelSettings" id="LabelSettings_7e6kv"]
font = ExtResource("1_xh380")
font_size = 48
font_color = Color(0.909804, 0.321569, 0.172549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k8go3"]
font = ExtResource("1_xh380")
font_size = 32
font_color = Color(0.8, 0.188235, 0.313726, 1)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jjb6d")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -24.5
offset_right = 200.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLbl" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_7e6kv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpaceLbl" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 8
text = "Press Space To Play Again"
label_settings = SubResource("LabelSettings_k8go3")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t7s7k")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
